--- a/README
+++ b/README
@@ -1,3 +1,17 @@
 A tool to help calcuate fusions in Persona 3, 4, and 5.
 
+Open here: 
+https://eyporage.github.io/persona-fusion-calculator/
+
+
+
+
+
+
+
+This is a Fork from https://github.com/arantius/persona-fusion-calculator
+
+I just added a css dark theme to prevent flashbanging myself when I poem the page
+
+
 See it at: https://arantius.github.io/persona-fusion-calculator
