--- a/README
+++ b/README
@@ -11,7 +11,7 @@ https://eyporage.github.io/persona-fusion-calculator/
 
 This is a Fork from https://github.com/arantius/persona-fusion-calculator
 
-I just added a css dark theme to prevent flashbanging myself when I poem the page
+I just added a css dark theme to prevent flashbanging myself when I open the pages
 
 
 See it at: https://arantius.github.io/persona-fusion-calculator
